Update text for the dog

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>楊真宜 Chen-Yi Yang (Portfolio)</title>
+  <title>楊真宜 Chen-Yi Yang (阿弟🐾)</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -71,11 +71,11 @@
     <!-- Page Title -->
     <div class="page-title dark-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">Portfolio Details</h1>
+        <h1 class="mb-2 mb-lg-0">阿弟🐾</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Portfolios</li>
+            <li class="current">阿弟🐾</li>
           </ol>
         </nav>
       </div>
@@ -107,6 +107,7 @@
                 }
               </script>
 
+              <div class="swiper-pagination"></div>
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
@@ -122,26 +123,26 @@
                 </div>
 
               </div>
-              <div class="swiper-pagination"></div>
             </div>
           </div>
-
           <div class="col-lg-4">
+            <br><br>
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
-              <h3>Project information</h3>
+              <h3>黑柴小檔案</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>名字</strong>：阿弟(ㄉ一ˊ)</li>
+                <li><strong>生日</strong>：2022.02.22</li>
+                <li><strong>品種</strong>：黑柴 🐶🐾</li>
+                <li><strong>性別</strong>：Male ♓♂️</li>
+                <li><strong>喜好</strong>：吃肉 🍖🍖🍖</li>
               </ul>
             </div>
-            <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
+            <!-- <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
               <h2>Exercitationem repudiandae officiis neque suscipit</h2>
               <p>
                 Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
               </p>
-            </div>
+            </div> -->
           </div>
 
         </div>
