Update text for the dog (2)

--- a/index.html
+++ b/index.html
@@ -411,8 +411,8 @@
                 <img src="assets/img/portfolio/dog-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                     <h4>阿弟</h4>
-                    <p>My Pet: 阿弟</p>
-                  <a href="assets/img/portfolio/dog-1.jpg" title="My Pet: 黑柴阿弟 🐶🐾" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                    <p>吉祥物 - 阿弟</p>
+                  <a href="assets/img/portfolio/dog-1.jpg" title="吉祥物 - 阿弟 🐶🐾" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
