--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -128,7 +128,7 @@
           <div class="col-lg-4">
             <br><br>
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
-              <h3>黑柴小檔案</h3>
+              <h3>吉祥物小檔案</h3>
               <ul>
                 <li><strong>名字</strong>：阿弟(ㄉ一ˊ)</li>
                 <li><strong>生日</strong>：2022.02.22</li>
