Update text for achievement

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-book"></i></div>
             <div>
               <h4 class="title"><a href="publication-details.html" class="stretched-link">學術發表</a></h4>
-              <p class="description">Karen 的學術發表涵蓋台灣新南向政策與東南亞語言人才培育、新住民子女語言現況與角色等主題。並在多場國際研討會上分享關於台灣原住民語言流失與復振、客家年輕世代語言活力與傳承等研究成果，為語言學與文化研究領域做出重要貢獻。<code>[點選了解]</code></p>
+              <p class="description">Karen 的學術發表涵蓋台灣新南向政策與東南亞語言人才培育、新住民子女語言現況與角色等主題。並在多場國際研討會上分享關於台灣原住民語言流失與復興、客家年輕世代語言活力與傳承等研究成果，為語言學與文化研究領域做出重要貢獻。<code>[點選了解]</code></p>
             </div>
           </div>
 
