Update text for achievement

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
             <div>
               <h4 class="title"><a href="project-details.html" class="stretched-link">研究計畫</a></h4>
-              <p class="description">Karen 主持並參與多項重要計畫，例如領導教育部「人文社會與產業實務創新鏈結計畫」、參與科技部人文創新與社會實踐、台灣閩南語的歷時演變研究、以及瀕危雅美語的保存與數位化建構等計畫，展現其在語言學與社會實踐領域的深厚造詣。<code>[點選了解]</code></p>
+              <p class="description">Karen 主持並參與多項重要計畫，例如主持教育部人文社會與產業實務創新鏈結計畫、參與科技部人文創新與社會實踐、台灣閩南語的歷時演變研究、以及瀕危雅美語的保存與數位化建構等計畫，展現其在語言學與社會實踐領域的深厚造詣。<code>[點選了解]</code></p>
             </div>
           </div>
 
