Update text for showcase

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             <li data-filter=".filter-branding">Branding</li>
             <li data-filter=".filter-books">Books</li>
             <li data-filter=".filter-guides-contest">競賽指導</li>
-            <li data-filter=".filter-licenses-certificates">認證/專利/證照</li>
+            <li data-filter=".filter-licenses-certificates">證照/專利/認證</li>
             <li data-filter=".filter-dog">阿弟🐾</li>
           </ul>
 
