--- a/publication-details.html
+++ b/publication-details.html
@@ -107,6 +107,11 @@
               研討會論文 Conference Papers
             </h5>
             <ul>
+              <li><i class="bi bi-caret-right"></i> <span>Yang, Chen Yi (2024). Interdisciplinary Application of Chinese-English Translation Courses: Using GIS Story Maps and Community Field Surveys as an Example. 2024 The Conference on Humanities, Social Sciences, and Industry Innovation Linkages, Shih Chien University.</span></li>             
+              <li><i class="bi bi-caret-right"></i> <span>Yang, Chen Yi (2023). Interdisciplinary Application of Chinese-English Translation and Community GIS Story Map. 2023 International Conference of New Praxis and Taiwan-Japan Alliance of Local Revitalization and Social Practice, National Chi Nan University.</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>楊真宜（2022）。客家年輕世代的語言活力與傳承。第十四屆台灣語言及其教學暨台灣學「蛻變的聲音」國際學術研討會，國立成功大學。</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>楊真宜（2022）。大學社會參與：以竹北客家農村為例。2022 第三屆中華物聯網與人工智慧研究學會年會暨國際研討會及第20屆管理學術研討會，國立勤益科技大學。</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>段曉林、靳知勤、潘雅玲、吳瑜萍、楊真宜（2022）。下一階段科教育目標建構之研究。第38屆科學教育國際研討會，國立清華大學。</span></li>
               <li><i class="bi bi-caret-right"></i> <span>楊真宜（2022）。客家年輕世代的語言活力與傳承。第十四屆台灣語言及其教學暨台灣學「蛻變的聲音」國際學術研討會，國立成功大學。</span></li>
               <li><i class="bi bi-caret-right"></i> <span>李天健、楊真宜、邱星崴（2021）。田野實作與前瞻人才培育。教育部人文社會與科技前瞻人才培育計畫（UFO） 2021 年 UFO 高等教育前瞻研討會。(MOST-108-2420-H-007-010-HSI)</span></li>
               <li><i class="bi bi-caret-right"></i> <span>楊真宜（2021）。大學社會參與：從「竹北有田」到「竹北有團」。2021新實踐暨臺日國際研討會，科技部。(MOST-108-2420-H-007-010-HSI)</span></li>
