Add new content for awards

--- a/index.html
+++ b/index.html
@@ -274,11 +274,15 @@
                 <li><i class="bi bi-bookmark-star"></i> 專利編號：新型第 M657972 號</li>
                 <li><i class="bi bi-bookmark-star"></i> 專利權期間：2024.07.11 - 2033.12.05</li>
               </ul>
+              <h4>學術教學職級證書(助理教授)</h4>
+              <ul style="list-style-type: none;">
+                <li><i class="bi bi-bookmark-star"></i> 教師證號：助理字第 154069 號</li>
+              </ul>
               <h4>高級中等學校英文科教師證書</h4>
               <ul style="list-style-type: none;">
                 <li><i class="bi bi-bookmark-star"></i> 教師證號：中字檢第 9800102 號</li>
               </ul>
-              <h4>教育部閩南語語言能力認證 (中高級)</h4>
+              <h4>教育部閩南語語言能力認證(中高級)</h4>
               <ul style="list-style-type: none;">
                 <li><i class="bi bi-bookmark-star"></i> 證書編號：臺語字第 1000211385 號</li>
               </ul>
@@ -363,7 +367,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>展示 Showcase</h2>
-        <p>Karen 在專業領域與個人生活中的多元成果。從創新應用競賽獲獎、專業證照與認證之取得、專利申請、到生活點滴，每張照片與描述都記錄了其成果與累積。透過這些分享，得以一探究竟 Karen 在學術與實務並進的旅程、以及對於教育與研究的熱情。</p>
+        <p>Karen 在專業領域與個人生活中的多元成果。從創新應用競賽獲獎、專業證照與證書、專利與獎項、到生活點滴，每張照片與描述都記錄了其成果與累積。透過這些分享，得以一探究竟 Karen 在學術與實務並進的旅程、以及對於教育與研究的熱情。</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -372,11 +376,11 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-product">Product</li>
             <li data-filter=".filter-branding">Branding</li>
             <li data-filter=".filter-books">Books</li>
             <li data-filter=".filter-guides-contest">競賽指導</li>
-            <li data-filter=".filter-licenses-certificates">證照/專利/認證</li>
+            <li data-filter=".filter-licenses-certificates">證照/證書</li>
+            <li data-filter=".filter-patents-awards">專利/獎項</li>
             <li data-filter=".filter-dog">阿弟🐾</li>
           </ul>
 
@@ -398,9 +402,9 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/licenses/AIL-expert.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                    <h4>認證/專利/證照</h4>
-                    <p>楊真宜老師 - 認證/專利/證照🏅📜</p>
-                  <a href="assets/img/licenses/AIL-expert.png" title="楊真宜老師 - 認證/專利/證照🏅📜" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                    <h4>證照/證書</h4>
+                    <p>楊真宜老師 - 證照/證書📜</p>
+                  <a href="assets/img/licenses/AIL-expert.png" title="楊真宜老師 - 證照/證書📜" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="licenses-certificates.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -414,6 +418,18 @@
                     <p>吉祥物 - 阿弟</p>
                   <a href="assets/img/portfolio/dog-1.jpg" title="吉祥物 - 阿弟 🐶🐾" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-patents-awards">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/patents/patent-cover.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>專利/獎項</h4>
+                    <p>楊真宜老師 - 專利/獎項🏆🏅</p>
+                  <a href="assets/img/patents/PAT-M657972.png" title="楊真宜老師 - 專利/獎項🏆🏅" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="patents-awards.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -461,18 +477,6 @@
                   <h4>Books 2</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/portfolio/books-2.jpg" title="Branding 2" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/product-3.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Product 3</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/product-3.jpg" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
