--- a/patents-awards.html
+++ b/patents-awards.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>楊真宜 Chen-Yi Yang (Licenses & Certificates)</title>
+  <title>楊真宜 Chen-Yi Yang (Patents & Awards)</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -71,17 +71,17 @@
     <!-- Page Title -->
     <div class="page-title dark-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">Licenses & Certificates</h1>
+        <h1 class="mb-2 mb-lg-0">Patents & Awards</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Licenses & Certificates</li>
+            <li class="current">Patents & Awards</li>
           </ol>
         </nav>
       </div>
     </div><!-- End Page Title -->
 
-    <!-- Licenses & Certificates Details Section -->
+    <!-- Patents & Awards Details Section -->
     <section id="portfolio-details" class="portfolio-details section">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -110,43 +110,25 @@
               <div class="swiper-pagination"></div>
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <img src="assets/img/licenses/TKT-Module2.png" alt="">
+                  <img src="assets/img/patents/PAT-M657972.png" alt="">
                 </div>
-
                 <div class="swiper-slide">
-                  <img src="assets/img/licenses/AIL-expert.png" alt="">
+                  <img src="assets/img/awards/RD-Performance-Award.png" alt="">
                 </div>
-
                 <div class="swiper-slide">
-                  <img src="assets/img/licenses/AIL-fundamental.png" alt="">
+                  <img src="assets/img/awards/Visiting-Scholar.png" alt="">
                 </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/certificates/Assistant-Professor.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/certificates/Secondary-School-Teacher.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/certificates/Southern-Min-Language-Proficiency.png" alt="">
-                </div>
-
               </div>
             </div>
           </div>
 
           <div class="col-lg-4">
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
-              <h3>Licenses & Certificates</h3>
+              <h3>Patents & Awards</h3>
               <ul>
-                <li><i class="bi bi-bookmark-star"></i> TKT 劍橋英語教師認證</li>
-                <li><i class="bi bi-bookmark-star"></i> AIL 人工智慧專業級證照</li>
-                <li><i class="bi bi-bookmark-star"></i> AIL 人工智慧基礎級證照</li>
-                <li><i class="bi bi-bookmark-star"></i> 學術教學職級證書(助理教授)</li>
-                <li><i class="bi bi-bookmark-star"></i> 高級中等學校英文科教師證書</li>
-                <li><i class="bi bi-bookmark-star"></i> 閩南語語言能力認證考試合格證書</li>
+                <li><i class="bi bi-bookmark-star"></i> 新型研發專利【外語口說評分系統】</li>
+                <li><i class="bi bi-bookmark-star"></i> 國立勤益科技大學推動研究發展績效獎</li>
+                <li><i class="bi bi-bookmark-star"></i> 美國夏威夷大學訪問學人邀請函</li>
               </ul>
             </div>
           </div>
@@ -155,7 +137,7 @@
 
       </div>
 
-    </section><!-- /Licenses & Certificates Details Section -->
+    </section><!-- /Patents & Awards Details Section -->
 
   </main>
 
