--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-people"></i></div>
             <div>
               <h4 class="title"><a href="paticipation-details.html" class="stretched-link">學術參與</a></h4>
-              <p class="description">(TBD) Karen 的學術參與包括擔任研討會評論人、PU研究生論文研討會主持人、畢業論文審查委員、期刊審查委員等角色。<code>[點選了解]</code></p>
+              <p class="description">Karen 的學術參與包括擔任研討會評論人、PU研究生論文研討會主持人、畢業論文審查委員、期刊審查委員等角色。這些經驗不僅強化其專業領域相關知識，也為後進學者提供了學術指導與建議，進一步推動學術社群的發展。<code>[點選了解]</code></p>
             </div>
           </div>
 
