Add new content for revitalization

--- a/index.html
+++ b/index.html
@@ -98,19 +98,23 @@
           </div>
           <div class="col-lg-8 content">
             <h2>Assistant Professor & Sociolinguist</h2>
-            <p>我對<b>社會語言學</b>領域感興趣，特別是其中的<b>語言使用與轉變</b>、<b>語言維持與流失</b>、<b>語言態度與身份認同</b>、<b>語言復興</b>、<b>語言政策與規劃</b>等子領域。我認為<b>語言不僅是溝通的工具，更是反映不同文化、社會與歷史背景的媒介</b>。每種語言都有其獨特性，應該被保存並傳承下去。</p>
-            <p>I am interested in the field of sociolinguistics, especially in the subfield, such as language use and shift, language maintenance and loss, language attitude and identity, language revitalization, language policy and planning, etc. I think that language is not only a tool for communication, but also a medium to reflect different cultures, societies and historical backgrounds. Every language has its own uniqueness and should be preserved and passed down.</p>
+            <hr>
+            <p></p>
+            <!-- <p>我對<b>社會語言學</b>領域感興趣，特別是其中的<b>語言使用與轉變</b>、<b>語言維持與流失</b>、<b>語言態度與身份認同</b>、<b>語言復興</b>、<b>語言政策與規劃</b>等子領域。我認為<b>語言不僅是溝通的工具，更是反映不同文化、社會與歷史背景的媒介</b>。每種語言都有其獨特性，應該被保存並傳承下去。</p>
+            <p>I am interested in the field of sociolinguistics, especially in the subfield, such as language use and shift, language maintenance and loss, language attitude and identity, language revitalization, language policy and planning, etc. I think that language is not only a tool for communication, but also a medium to reflect different cultures, societies and historical backgrounds. Every language has its own uniqueness and should be preserved and passed down.</p> -->
             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>楊真宜 Chen-Yi Yang</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Ph. D.</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>04-23924505 #8633</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Taichung, Taiwan</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Ph. D.</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Name (E):</strong> <span>Karen Yang</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Office:</strong> <span>K602A</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>a91406587@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>chen-yi-yang.github.io</span></li>
                 </ul>
@@ -133,9 +137,9 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>經歷 Experiences</h2>
-        <p>
+        <!-- <p>
           Karen 兼具學術與實務經驗，學術專長包括《語言學》、《語意學》、《語用學》、《語言政策》、《田野調查》、《英語教學》、《社會語言學》、《應用語言學》、《地方創生與社會實踐》（社區營造、跨領域整合與應用）等。目前於大學擔任教職，亦曾赴美國夏威夷大學擔任訪問學者，積極參與跨文化語言研究與社會實踐計畫。此外，亦長期參與教育部與科技部的學術研究與產學合作計畫，推動英語教育、語言保留與科技應用的結合，致力於提升學術研究與社會應用的影響力。
-        </p>
+        </p> -->
         <!-- <ul>
           <li><span><u>開設課程</u>：語言學概論、語意學、語用學、語音學、世界語言政策及語言流失、田野調查及問卷設計、英語及流行音樂、TED Talks、數位英語、台灣語言現況（前世與今生）、地方創生（理論與實務之應用）</span></li>
         </ul> -->
@@ -300,7 +304,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>成就 Achievements</h2>
-        <p>Karen 在學術研究、教育推廣與產學合作等領域取得豐碩成果。其學術發表涵蓋社會語言學、語言政策與規劃、語言習得與文化認同等主題，參與多項跨學科研究計畫。且積極投入產學合作與英語教育人才培育，促進學術研究與實務應用的結合。此外，Karen 指導學生進行畢業專題論文，協助他們在學術發展與實務經驗之間建立紮實的基礎，展現其在教學與研究上的多元貢獻。</p>
+        <!-- <p>Karen 在學術研究、教育推廣與產學合作等領域取得豐碩成果。其學術發表涵蓋社會語言學、語言政策與規劃、語言習得與文化認同等主題，參與多項跨學科研究計畫。且積極投入產學合作與英語教育人才培育，促進學術研究與實務應用的結合。此外，Karen 指導學生進行畢業專題論文，協助他們在學術發展與實務經驗之間建立紮實的基礎，展現其在教學與研究上的多元貢獻。</p> -->
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -311,7 +315,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-book"></i></div>
             <div>
               <h4 class="title"><a href="publication-details.html" class="stretched-link">學術發表</a></h4>
-              <p class="description">Karen 的學術發表涵蓋台灣新南向政策與東南亞語言人才培育、新住民子女語言現況與角色等主題。並在多場國際研討會上分享關於台灣原住民語言流失與復興、客家年輕世代語言活力與傳承等研究成果，為語言學與文化研究領域做出重要貢獻。<code>[點選了解]</code></p>
+              <p class="description">學術發表涵蓋台灣新南向政策與東南亞語言人才培育、新住民子女語言現況與角色等主題。並在多場國際研討會上分享關於台灣原住民語言流失與復興、客家年輕世代語言活力與傳承等研究成果，為語言學與文化研究領域做出重要貢獻。<code>[點選了解]</code></p>
             </div>
           </div>
 
@@ -319,15 +323,15 @@
             <div class="icon flex-shrink-0"><i class="bi bi-people"></i></div>
             <div>
               <h4 class="title"><a href="paticipation-details.html" class="stretched-link">學術參與</a></h4>
-              <p class="description">Karen 的學術參與包括擔任研討會評論人、PU研究生論文研討會主持人、畢業論文審查委員、期刊審查委員等角色。這些經驗不僅強化其專業領域相關知識，也為後進學者提供了學術指導與建議，進一步推動學術社群的發展。<code>[點選了解]</code></p>
+              <p class="description">學術參與包括擔任研討會評論人、PU研究生論文研討會主持人、畢業論文審查委員、期刊審查委員等角色。這些經驗不僅強化其專業領域相關知識，也為後進學者提供了學術指導與建議，進一步推動學術社群的發展。<code>[點選了解]</code></p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="icon flex-shrink-0"><i class="bi bi-box"></i></div>
             <div>
-              <h4 class="title"><a href="graduation-details.html" class="stretched-link">學生專題</a></h4>
-              <p class="description">Karen 帶領學生們的畢業專題論文列表，涵蓋台灣大學生台語學習與文化認同、應用英語系學生英語口說焦慮潛在成因探討、台灣新二代的語言保留與習得等主題。展現了在語言學習、文化認同與多元文化教育方面的專業指導能力。<code>[點選了解]</code></p>
+              <h4 class="title"><a href="graduation-details.html" class="stretched-link">專題指導</a></h4>
+              <p class="description">帶領學生們的畢業專題論文列表，涵蓋台灣大學生台語學習與文化認同、應用英語系學生英語口說焦慮潛在成因探討、台灣新二代的語言保留與習得等主題。展現了在語言學習、文化認同與多元文化教育方面的專業指導能力。<code>[點選了解]</code></p>
             </div>
           </div>
 
@@ -335,7 +339,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
             <div>
               <h4 class="title"><a href="project-details.html" class="stretched-link">研究計畫</a></h4>
-              <p class="description">Karen 主持並參與多項重要計畫，例如主持教育部人文社會與產業實務創新鏈結計畫、參與科技部人文創新與社會實踐、台灣閩南語的歷時演變研究、以及瀕危雅美語的保存與數位化建構等計畫，展現其在語言學與社會實踐領域的深厚造詣。<code>[點選了解]</code></p>
+              <p class="description">主持並參與多項重要計畫，例如主持教育部人文社會與產業實務創新鏈結計畫、參與科技部人文創新與社會實踐、台灣閩南語的歷時演變研究、以及瀕危雅美語的保存與數位化建構等計畫，展現其在語言學與社會實踐領域的深厚造詣。<code>[點選了解]</code></p>
             </div>
           </div>
 
@@ -343,7 +347,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-arrow-repeat"></i></div>
             <div>
               <h4 class="title"><a href="cooperation-details.html" class="stretched-link">產學合作</a></h4>
-              <p class="description">Karen 積極推動產學合作，主持多項英語補習教育實務人才培育計畫，並與台中市多家英語補習機構合作，包括互動美語北屯分公司、佳音太平分校、夏恩英語、芝麻街美語、新高穩瑩、獅子王等，致力於培育英語教育實務人才，提升英語教學品質。<code>[點選了解]</code></p>
+              <p class="description">積極推動產學合作，主持多項英語補習教育實務人才培育計畫，並與台中市多家英語補習機構合作，包括互動美語北屯分公司、佳音太平分校、夏恩英語、芝麻街美語、新高穩瑩、獅子王等，致力於培育英語教育實務人才，提升英語教學品質。<code>[點選了解]</code></p>
             </div>
           </div>
 
@@ -351,7 +355,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-chat-left-dots"></i></div>
             <div>
               <h4 class="title"><a href="work-details.html" class="stretched-link">工作經歷</a></h4>
-              <p class="description">Karen 曾於多所大學擔任教職與研究職位，包括國立清華大學、中山大學、彰化師範大學、高雄科技大學等。其職責涵蓋科學教育計畫之規劃、智慧城鄉創生研究、英語教學，以及社區記憶與創新轉型等領域，展現其在教育與研究上的多元專業。<code>[點選了解]</code></p>
+              <p class="description">曾於多所大學擔任教職與研究職位，包括國立清華大學、中山大學、彰化師範大學、高雄科技大學等。其職責涵蓋科學教育計畫之規劃、智慧城鄉創生研究、英語教學，以及社區記憶與創新轉型等領域，展現其在教育與研究上的多元專業。<code>[點選了解]</code></p>
             </div>
           </div>
 
@@ -367,7 +371,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>展示 Showcase</h2>
-        <p>Karen 在專業領域與個人生活中的多元成果。從創新應用競賽獲獎、專業證照與證書、專利與獎項、到生活點滴，每張照片與描述都記錄了其成果與累積。透過這些分享，得以一探究竟 Karen 在學術與實務並進的旅程、以及對於教育與研究的熱情。</p>
+        <p>專業領域與個人生活中的多元成果，從創新應用競賽獲獎、專業證照與證書、專利與獎項、到生活點滴，每張照片與描述都記錄了其成果與累積。透過這些分享，得以一探究竟 Karen 在學術與實務並進的旅程、以及對於教育與研究的熱情。</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -376,9 +380,9 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-branding">Branding</li>
-            <li data-filter=".filter-books">Books</li>
+            <!-- <li data-filter=".filter-books">Books</li> -->
             <li data-filter=".filter-guides-contest">競賽指導</li>
+            <li data-filter=".filter-revitalizations">地方創生</li>
             <li data-filter=".filter-licenses-certificates">證照/證書</li>
             <li data-filter=".filter-patents-awards">專利/獎項</li>
             <li data-filter=".filter-dog">阿弟🐾</li>
@@ -391,7 +395,7 @@
                 <img src="assets/img/guides/guide-cover.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>競賽指導</h4>
-                  <p>《全國人文社會永續行動創新應用競賽》✨ 獲選優勝 ✨</p>
+                  <p>《全國人文社會永續行動創新應用競賽》<br>✨ 獲選優勝&佳作 ✨</p>
                   <a href="assets/img/guides/guide-zoom.jpg" title="楊真宜老師 - 指導《全國人文社會永續行動創新應用競賽》🏆 獲選優勝&佳作 🏆" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="guide-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -422,6 +426,18 @@
               </div>
             </div>
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-revitalizations">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/revitalizations/rev-01.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                    <h4>地方創生</h4>
+                    <p>楊真宜老師 - 地方創生 🌱✨</p>
+                  <a href="assets/img/revitalizations/rev-01.jpg" title="楊真宜老師 - 地方創生 🌱✨" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="revitalization-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div>
+
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-patents-awards">
               <div class="portfolio-content h-100">
                 <img src="assets/img/patents/patent-cover.png" class="img-fluid" alt="">
@@ -434,37 +450,13 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/branding-1.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Branding 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/branding-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
+            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/books-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Books 1</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="assets/img/portfolio/books-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/branding-2.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Branding 2</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/branding-2.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -482,18 +474,6 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/branding-3.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Branding 3</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/branding-3.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div>
-
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
@@ -504,7 +484,7 @@
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div>
+            </div> -->
 
           </div><!-- End Showcase Container -->
 
