--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -131,10 +131,10 @@
               <h3>吉祥物小檔案</h3>
               <ul>
                 <li><strong>名字</strong>：阿弟(ㄉ一ˊ)</li>
-                <li><strong>生日</strong>：2022.02.22</li>
+                <li><strong>生日</strong>：2020.02.22</li>
                 <li><strong>品種</strong>：黑柴 🐶🐾</li>
                 <li><strong>性別</strong>：Male ♓♂️</li>
-                <li><strong>喜好</strong>：吃肉 🍖🍖🍖</li>
+                <li><strong>喜好</strong>：吃肉、散步、咬主人 🍖🍖🍖</li>
               </ul>
             </div>
             <!-- <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
