--- a/work-details.html
+++ b/work-details.html
@@ -104,7 +104,7 @@
               <li><i class="bi bi-briefcase"></i> 教育部國民及學前教育署「第2期中小學科學教育中程計畫規劃」</li>
               <li>
                 <ul style="list-style-type: none;">
-                  <li><i class="bi bi-caret-right"></i> (TBD)</li>
+                  <!-- <li><i class="bi bi-caret-right"></i> (TBD)</li> -->
                 </ul>
               </li>
             </ul>
@@ -129,7 +129,7 @@
               <li><i class="bi bi-briefcase"></i> 授課課程：大學部英文</li>
               <li>
                 <ul style="list-style-type: none;">
-                  <li><i class="bi bi-caret-right"></i> (TBD)</li>
+                  <!-- <li><i class="bi bi-caret-right"></i> (TBD)</li> -->
                 </ul>
               </li>
             </ul>
