--- a/revitalization-details.html
+++ b/revitalization-details.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>楊真宜 Chen-Yi Yang (Paticipation)</title>
+  <title>楊真宜 Chen-Yi Yang (Regional Revitalizations)</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -36,7 +36,7 @@
   ======================================================== -->
 </head>
 
-<body class="service-details-page">
+<body class="portfolio-details-page">
 
   <header id="header" class="header dark-background d-flex flex-column">
     <i class="header-toggle d-xl-none bi bi-list"></i>
@@ -64,7 +64,6 @@
         <li><a href="#"><i class="bi bi-speedometer navicon"></i> <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120"></a></li>
       </ul>
     </nav>
-
   </header>
 
   <main class="main">
@@ -72,40 +71,75 @@
     <!-- Page Title -->
     <div class="page-title dark-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">Paticipation Details</h1>
+        <h1 class="mb-2 mb-lg-0">Revitalization Details</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Paticipations</li>
+            <li class="current">Revitalizations</li>
           </ol>
         </nav>
       </div>
     </div><!-- End Page Title -->
 
-    <!-- Paticipation Details Section -->
-    <section id="service-details" class="service-details section">
-      <div class="container">
+    <!-- Revitalizations Details Section -->
+    <section id="portfolio-details" class="portfolio-details section">
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
         <div class="row gy-4">
-          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="services-list">
-              <img src="assets/img/photo-1.jpg" alt="" class="img-fluid services-img">
-              <img src="assets/img/photo-2.jpg" alt="" class="img-fluid services-img">
+
+          <div class="col-lg-8">
+            <div class="portfolio-details-slider swiper init-swiper">
+
+              <script type="application/json" class="swiper-config">
+                {
+                  "loop": true,
+                  "speed": 600,
+                  "autoplay": {
+                    "delay": 5000
+                  },
+                  "slidesPerView": "auto",
+                  "pagination": {
+                    "el": ".swiper-pagination",
+                    "type": "bullets",
+                    "clickable": true
+                  }
+                }
+              </script>
+
+              <div class="swiper-pagination"></div>
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <img src="assets/img/revitalizations/rev-01.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/revitalizations/rev-02.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/revitalizations/rev-03.jpg" alt="">
+                </div>
+
+              </div>
             </div>
           </div>
-          <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
-            <h3><i class="bi bi-people"></i> 學術參與 Acdamic Participation</h3>
-            <hr>
-            <h5>
-              (TBC)
-              <!-- 委員擔任、研討會評論人、期刊審查委員、PU研究生論文研討會主持人、畢業論文審查委員 -->
-            </h5>
-            <ul>
-              <li><i class="bi bi-caret-right"></i> <span></span></li>
-            </ul>
+
+          <div class="col-lg-4">
+            <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
+              <h3>Regional Revitalizations</h3>
+              <ul>
+                <li><i class="bi bi-binoculars"></i> 田野調查</li>
+                <li><i class="bi bi-rocket-takeoff"></i> 地方創生</li>
+              </ul>
+            </div>
+          </div>
+
         </div>
+
       </div>
 
-    </section><!-- /Paticipation Details Section -->
+    </section><!-- /Revitalizations Details Section -->
 
   </main>
 
