Update text for achievements

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-people"></i></div>
             <div>
               <h4 class="title"><a href="paticipation-details.html" class="stretched-link">學術參與</a></h4>
-              <p class="description">學術參與包括擔任研討會評論人、PU研究生論文研討會主持人、畢業論文審查委員、期刊審查委員等角色。這些經驗不僅強化其專業領域相關知識，也為後進學者提供了學術指導與建議，進一步推動學術社群的發展。<code>[點選了解]</code></p>
+              <p class="description">學術參與包括擔任研討會評論人、PU研究生論文研討會主持人、畢業論文審查委員、期刊審查委員等角色。這些經驗強化其專業領域相關知識，也為後進學者提供學術指導與建議，進一步推動學術社群發展。<code>[點選了解]</code></p>
             </div>
           </div>
 
@@ -355,7 +355,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-chat-left-dots"></i></div>
             <div>
               <h4 class="title"><a href="work-details.html" class="stretched-link">工作經歷</a></h4>
-              <p class="description">曾於多所大學擔任教職與研究職位，包括國立清華大學、中山大學、彰化師範大學、高雄科技大學等。其職責涵蓋科學教育計畫之規劃、智慧城鄉創生研究、英語教學，以及社區記憶與創新轉型等領域，展現其在教育與研究上的多元專業。<code>[點選了解]</code></p>
+              <p class="description">曾於各大學擔任教職與研究職位，包括國立清華大學、中山大學、彰化師範大學、高雄科技大學等。職責涵蓋科學教育計畫之規劃、智慧城鄉創生研究、英語教學，以及社區記憶與創新轉型等領域，展現其在教育與研究上的多元專業。<code>[點選了解]</code></p>
             </div>
           </div>
 
