Update text for achievements

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-people"></i></div>
             <div>
               <h4 class="title"><a href="paticipation-details.html" class="stretched-link">學術參與</a></h4>
-              <p class="description">除學術發表外，學術參與包括擔任研討會評論人、PU研究生論文研討會主持人、畢業論文審查委員、期刊審查委員等角色。這些經驗不僅強化其專業領域相關知識，也為後進學者提供了學術指導與建議，進一步推動學術社群的發展。<code>[點選了解]</code></p>
+              <p class="description">除學術發表外，學術參與涵蓋擔任研討會評論人、PU研究生論文研討會主持人、畢業論文審查委員、期刊審查委員等角色。這些經驗不僅強化其專業領域相關知識，也為後進學者提供了學術指導與建議，進一步推動學術社群的發展。<code>[點選了解]</code></p>
             </div>
           </div>
 
@@ -331,7 +331,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-box"></i></div>
             <div>
               <h4 class="title"><a href="graduation-details.html" class="stretched-link">專題指導</a></h4>
-              <p class="description">帶領學生們的畢業專題論文列表，涵蓋台灣大學生台語學習與文化認同、應用英語系學生英語口說焦慮潛在成因探討、台灣新二代的語言保留與習得等主題。展現了在語言學習、文化認同與多元文化教育方面的專業指導能力。<code>[點選了解]</code></p>
+              <p class="description">帶領學生們的畢業專題論文列表，例如台灣大學生台語學習與文化認同、應用英語系學生英語口說焦慮潛在成因探討、台灣新二代的語言保留與習得等主題。展現了在語言學習、文化認同與多元文化教育方面的專業指導能力。<code>[點選了解]</code></p>
             </div>
           </div>
 
