--- a/paticipation-details.html
+++ b/paticipation-details.html
@@ -88,8 +88,8 @@
         <div class="row gy-4">
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="services-list">
-              <img src="assets/img/photo-1.jpg" alt="" class="img-fluid services-img">
-              <img src="assets/img/photo-2.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/academic/acad-3.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/academic/acad-4.jpg" alt="" class="img-fluid services-img">
             </div>
           </div>
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
