--- a/work-details.html
+++ b/work-details.html
@@ -88,8 +88,9 @@
         <div class="row gy-4">
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="services-list">
-              <img src="assets/img/photo-1.jpg" alt="" class="img-fluid services-img">
-              <img src="assets/img/photo-2.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/works/works-1.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/works/works-2.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/works/works-3.jpg" alt="" class="img-fluid services-img">
             </div>
           </div>
 
