--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-box"></i></div>
             <div>
               <h4 class="title"><a href="graduation-details.html" class="stretched-link">專題指導</a></h4>
-              <p class="description">帶領學生們的畢業專題論文列表，例如台灣大學生台語學習與文化認同、應用英語系學生英語口說焦慮潛在成因探討、台灣新二代的語言保留與習得等主題。展現了在語言學習、文化認同與多元文化教育方面的專業指導能力。<code>[點選了解]</code></p>
+              <p class="description">協助帶領學生們的畢業專題論文，例如台灣大學生台語學習與文化認同、應用英語系學生英語口說焦慮潛在成因探討、台灣新二代的語言保留與習得等主題。展現了在語言學習、文化認同與多元文化教育方面的專業指導能力。<code>[點選了解]</code></p>
             </div>
           </div>
 
