--- a/project-details.html
+++ b/project-details.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>楊真宜 Chen-Yi Yang (Project)</title>
+  <title>楊真宜 Chen-Yi Yang (研究計畫)</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -72,11 +72,11 @@
     <!-- Page Title -->
     <div class="page-title dark-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">Project Details</h1>
+        <h1 class="mb-2 mb-lg-0">研究計畫 Details</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Projects</li>
+            <li class="current">研究計畫</li>
           </ol>
         </nav>
       </div>
