--- a/revitalization-details.html
+++ b/revitalization-details.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>楊真宜 Chen-Yi Yang (Regional Revitalizations)</title>
+  <title>楊真宜 Chen-Yi Yang (地方創生)</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -71,11 +71,11 @@
     <!-- Page Title -->
     <div class="page-title dark-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">Revitalization Details</h1>
+        <h1 class="mb-2 mb-lg-0">地方創生 Details</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Revitalizations</li>
+            <li class="current">地方創生</li>
           </ol>
         </nav>
       </div>
@@ -131,6 +131,9 @@
               <ul>
                 <li><i class="bi bi-binoculars"></i> 田野調查</li>
                 <li><i class="bi bi-rocket-takeoff"></i> 地方創生</li>
+                <li><i class="bi bi-backpack2"></i> 社會實踐</li>
+                <li><i class="bi bi-box-arrow-down-right"></i> 跨領域協作</li>
+                <li><i class="bi bi-brightness-alt-high"></i> 聯合國 SDGs 永續發展</li>
               </ul>
             </div>
           </div>
