--- a/guide-details.html
+++ b/guide-details.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>楊真宜 Chen-Yi Yang (Guides)</title>
+  <title>楊真宜 Chen-Yi Yang (競賽指導)</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -71,11 +71,11 @@
     <!-- Page Title -->
     <div class="page-title dark-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">Guide Details</h1>
+        <h1 class="mb-2 mb-lg-0">競賽指導 Details</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Guides</li>
+            <li class="current">競賽指導</li>
           </ol>
         </nav>
       </div>
