--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -134,7 +134,7 @@
                 <li><strong>生日</strong>：2020.02.22</li>
                 <li><strong>品種</strong>：黑柴 🐶🐾</li>
                 <li><strong>性別</strong>：Male ♓♂️</li>
-                <li><strong>喜好</strong>：吃肉、散步、咬主人 🍖🍖🍖</li>
+                <li><strong>喜好</strong>：吃肉🍖、散步🐕、咬主人🚶‍♂️、咬爛衛生紙🧻</li>
               </ul>
             </div>
             <!-- <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
