Fix text for overall content

--- a/patents-awards.html
+++ b/patents-awards.html
@@ -75,7 +75,7 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Patents & Awards</li>
+            <li class="current">專利&獎項</li>
           </ol>
         </nav>
       </div>
@@ -128,7 +128,7 @@
               <ul>
                 <li><i class="bi bi-bookmark-star"></i> 新型研發專利【外語口說評分系統】</li>
                 <li><i class="bi bi-bookmark-star"></i> 國立勤益科技大學推動研究發展績效獎</li>
-                <li><i class="bi bi-bookmark-star"></i> 美國夏威夷大學訪問學人邀請函</li>
+                <li><i class="bi bi-bookmark-star"></i> 美國夏威夷大學訪問學人(國科會千里馬計畫)</li>
               </ul>
             </div>
           </div>
