--- a/licenses-certificates.html
+++ b/licenses-certificates.html
@@ -75,7 +75,7 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Licenses & Certificates</li>
+            <li class="current">證照&證書</li>
           </ol>
         </nav>
       </div>
