--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -71,7 +71,7 @@
     <!-- Page Title -->
     <div class="page-title dark-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">阿弟🐾</h1>
+        <h1 class="mb-2 mb-lg-0">吉祥物 - 阿弟🐾</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
@@ -128,7 +128,7 @@
           <div class="col-lg-4">
             <br><br>
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
-              <h3>吉祥物小檔案</h3>
+              <h3>【吉祥物 - 阿弟🐾】小檔案</h3>
               <ul>
                 <li><strong>名字</strong>：阿弟(ㄉ一ˊ)</li>
                 <li><strong>生日</strong>：2020.02.22</li>
