--- a/publication-details.html
+++ b/publication-details.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>楊真宜 Chen-Yi Yang (學術發表)</title>
+  <title>楊真宜 Chen-Yi Yang (Academic Publications)</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -72,7 +72,7 @@
     <!-- Page Title -->
     <div class="page-title dark-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">學術發表 Details</h1>
+        <h1 class="mb-2 mb-lg-0">Academic Publications</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
@@ -93,7 +93,7 @@
             </div>
           </div>
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
-            <h3><i class="bi bi-book"></i> 學術發表 Acdamic Publications</h3>
+            <h3><i class="bi bi-book"></i> 學術發表 Academic Publications</h3>
             <hr>
             <h5>
               期刊論文 Journal Articles
