--- a/competitions.html
+++ b/competitions.html
@@ -81,7 +81,7 @@
       </div>
     </div><!-- End Page Title -->
 
-    <!-- Guide Details Section -->
+    <!-- Competition Details Section -->
     <section id="portfolio-details" class="portfolio-details section">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -153,7 +153,7 @@
 
       </div>
 
-    </section><!-- /Guide Details Section -->
+    </section><!-- /Competition Details Section -->
 
   </main>
 
