--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
             <!-- <li data-filter=".filter-books">Books</li> -->
-            <li data-filter=".filter-guides-contest">競賽指導</li>
+            <li data-filter=".filter-guides-competitions">競賽指導</li>
             <li data-filter=".filter-revitalizations">地方創生</li>
             <li data-filter=".filter-licenses-certificates">證照/證書</li>
             <li data-filter=".filter-patents-awards">專利/獎項</li>
@@ -391,14 +391,14 @@
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-guides-contest">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-guides-competitions">
               <div class="portfolio-content h-100">
                 <img src="assets/img/guides/guide-cover.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>競賽指導</h4>
                   <p>《全國人文社會永續行動創新應用競賽》<br>✨ 獲選優勝&佳作 ✨</p>
                   <a href="assets/img/guides/guide-zoom.jpg" title="楊真宜老師 - 指導《全國人文社會永續行動創新應用競賽》🏆 獲選優勝&佳作 🏆" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="guide-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="competitions.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
